# ue5-vehicle-synth

./: .dockerignore  .dvcignore  .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  LICENSE  Makefile  README.md  README.ru.md  dvc.yaml  index.html  mkdocs.yml  objects.inv  params.yaml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
Plugin/UESynthCapture/: UESynthCapture.uplugin
Plugin/UESynthCapture/Source/UESynthCapture/: UESynthCapture.Build.cs
Plugin/UESynthCapture/Source/UESynthCapture/Private/: SynthCOCOExporter.cpp  SynthCaptureSubsystem.cpp  SynthRoadQuery.cpp  SynthVehicleAnnotator.cpp  UESynthCaptureModule.cpp
Plugin/UESynthCapture/Source/UESynthCapture/Private/Tests/: SynthCaptureSpec.cpp
Plugin/UESynthCapture/Source/UESynthCapture/Public/: SynthCOCOExporter.h  SynthCaptureSubsystem.h  SynthRoadQuery.h  SynthVehicleAnnotator.h  UESynthCaptureModule.h
UEProject/: UEProject.uproject
UEProject/Config/: DefaultEngine.ini  DefaultGame.ini
UEProject/Source/: UEProject.Target.cs  UEProjectEditor.Target.cs
UEProject/Source/UEProject/: UEProject.Build.cs
api/: index.html
configs/: config.yaml
configs/data/: default.yaml
configs/experiment/: baseline.yaml  sota.yaml
configs/model/: default.yaml
configs/trainer/: default.yaml
configs/vehicles/: citysample_vehBus_vehicle10.json  citysample_vehCar_vehicle02.json  citysample_vehCar_vehicle03.json  citysample_vehCar_vehicle05.json  citysample_vehCar_vehicle06.json  citysample_vehCar_vehicle07.json  citysample_vehCar_vehicle12.json  citysample_vehTruck_vehicle04.json  citysample_vehTruck_vehicle08.json  citysample_vehTruck_vehicle11.json  citysample_vehVan_vehicle01.json  citysample_vehVan_vehicle09.json
docs/: api.md  architecture.md  index.md  model_card.md.j2  pipeline.md  serving.md  training.md
docs/legal/: CITY_SAMPLE_EULA_REVIEW.md
legal/CITY_SAMPLE_EULA_REVIEW/: index.html
notebooks/: 01_eda.ipynb  02_demo.ipynb
pipeline/: index.html
scripts/: aggregate_v4.py  build_hf_dataset.py  download_data.sh  draw_cine_overlay.py  export_hf_native.py  filter_dark_frames.py  jsonl_to_coco.py  make_overlay_montage.py  publish_to_hf.py  run_phase0_capture.py  smoke_test.sh  sync_data.sh  ue_capture_batch.py  ue_capture_v4.py  ue_cine_render.py  ue_derive_geo.py  ue_derive_vehicle_configs.py  ue_lighting.py  ue_mrq_render.py  ue_zonegraph.py  upload_dataset_hf.py  zonegraph_sampling.py
search/: search_index.json
src/ue5_vehicle_synth/: __init__.py  __main__.py  coco_exporter.py  postprocess.py  schema.py
src/ue5_vehicle_synth/data/: __init__.py  datamodule.py  dataset.py  prepare.py  transforms.py
src/ue5_vehicle_synth/evaluation/: evaluate.py
src/ue5_vehicle_synth/inference/: predict.py
src/ue5_vehicle_synth/models/: __init__.py  factory.py  lightning_module.py  metrics.py
src/ue5_vehicle_synth/training/: train.py
src/ue5_vehicle_synth/utils/: __init__.py  hf_hub.py  logging.py  seed.py
tests/: conftest.py  test_coco_exporter.py  test_data.py  test_inference.py  test_jsonl_to_coco.py  test_model.py  test_postprocess.py  test_training.py  test_zonegraph_sampling.py
wiki/: Configuration.md  Generating-a-Dataset.md  Home.md  Installation.md  Pipeline.md  Training-and-Evaluation.md  Troubleshooting.md
